--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -1177,6 +1177,11 @@
                         }));
                     });
                 }
+                if (this.selectedTag == null || this.selectedTag.filterList.length == 0) {
+                    return this.videos.filter(function (u) {
+                        return (u.channelTitle == app.filter && (u.title + u.description).toUpperCase().includes(searchFilterUp));
+                    });
+                }
                 return this.videos.filter(function (u) {
                     return (u.channelTitle == app.filter && (u.title + u.description).toUpperCase().includes(searchFilterUp) && app.selectedTag.filterList.some(function(f) {
                         return (u.title + u.description).toUpperCase().includes(f.toUpperCase());
@@ -1288,8 +1293,6 @@
                 this.oldVideos = await result.json();
             },
             showSettings() {
-                this.channelMode = false;
-
                 this.changes = false;
 
                 this.getSettings();
@@ -1298,14 +1301,6 @@
             },
             showTags() {
                 this.channelMode = false;
-
-                if (this.settingsMode) {
-                    this.settingsMode = false;
-
-                    this.changes = false;
-
-                    this.getSettings();
-                }
 
                 if (this.tagsMode) {
                     this.tags.forEach(function (t) {
@@ -1426,11 +1421,9 @@
             async showChannels() {
                 var waiter = fetch("/api/values/channels");
 
-                this.settingsMode = false;
-
-                this.changes = false;
-
-                this.getSettings();
+                if (this.tagsMode) {
+                    this.showTags();
+                }
 
                 this.channelMode = !this.channelMode;
 
