--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -1040,7 +1040,7 @@
         <div class="spacer">
 
         </div>
-        <table v-show="videoListMode && filter==='SubBox' && searchFilter === ''" class="listList">
+        <table v-show="videoListMode && filter==='SubBox' && searchFilter === '' && selectedTag == null" class="listList">
             <tr v-for="video in lists">
                 <td>
                     <div class="videoBox">
@@ -1163,11 +1163,11 @@
         },
         computed: {
             filteredVideos: function () {
-                if (this.filter === "SubBox" && this.searchFilter === "" && (this.selectedTag == null || this.selectedTag.filterList.length == 0)) {
+                if (this.filter === "SubBox" && this.searchFilter === "" && this.selectedTag == null) {
                     return this.videos;
                 }
                 searchFilterUp = this.searchFilter.toUpperCase();
-                if (this.filter === "SubBox" && (this.selectedTag == null || this.selectedTag.filterList.length == 0)) {
+                if (this.filter === "SubBox" && this.selectedTag == null) {
                     return this.videos.filter(function (u) {
                         return (u.title + u.description + u.channelTitle).toUpperCase().includes(searchFilterUp);
                     });
@@ -1179,7 +1179,7 @@
                         }));
                     });
                 }
-                if (this.selectedTag == null || this.selectedTag.filterList.length == 0) {
+                if (this.selectedTag == null) {
                     return this.videos.filter(function (u) {
                         return (u.channelTitle == app.filter && (u.title + u.description + u.channelTitle).toUpperCase().includes(searchFilterUp));
                     });
